org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/ImportAndInnerClassesNamesAreTheSameGoodCase3.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File {from ="DependencyOuterPackage.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File {from ="DependencyOuterPackage.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	class A{
		class a2{}
	}
	class inner{
		import OuterPackage::*;
		class B specializes A {
			// XPECT errors --> "Couldn't resolve reference to Class 'a2'." at "a2"
			class b specializes a2{}
		}
	}
}