org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/SameNamesImportAsFeature.alf.xt
//This test is failing.  The errors generated by the original junit test is "Couldn't resolve reference to Class 'B'."
//Test with junit or junit plugin-test results in the different error.
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File "SamePackageName_A.alf" {}
		File "SamePackageName_B.alf" {}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File "SamePackageName_A.alf" {}
				File "SamePackageName_B.alf" {}
			}
		}
	}
END_SETUP 
*/

package test{
	import SamePackage::container;
	//junit plug-in test
	//XPECT errors -->"Couldn't resolve reference to Class 'container::A'." at "container::A"
	class something1 specializes container::A{}
	//junit test
	//"Couldn't resolve reference to Class 'container::B'." at "container::B"
	class something2 specializes container::B{}
}
